objects/amc__Billing_Payment__c.object
<CustomObject>
    <description>The Billing Payment Object is a child to the Billing Event Object and enables users to specify the payments relating to a billing event (e.g. invoice / credit)</description>
    <fields>
        <fullName>amc__Amount__c</fullName>
        <inlineHelpText>Identifies the value of the payment</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Billing_Event__c</fullName>
        <inlineHelpText>Links to the parent Billing Event this payment relates to</inlineHelpText>
        <label>Billing Event</label>
        <referenceTo>amc__Billing_Event__c</referenceTo>
        <relationshipLabel>Billing Payments</relationshipLabel>
        <relationshipName>Billing_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amc__Date_Paid__c</fullName>
        <inlineHelpText>Identifies the date the payment was made</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Payment_Method__c</fullName>
        <description>Identifies how the payment was made.</description>
        <inlineHelpText>Identifies how the payment was made.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>EFTPOS</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Reference__c</fullName>
        <inlineHelpText>Identifies the reference number for this payment</inlineHelpText>
        <label>Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Billing Payment</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Billing_Event__c</columns>
        <columns>amc__Date_Paid__c</columns>
        <columns>amc__Amount__c</columns>
        <columns>amc__Payment_Method__c</columns>
        <columns>amc__Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>